tests/regression/errors/basic/type_error_14.csd
// Type error test 14
sus number drip = 14
sus text tea = "string_14"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 14:", wrong)
